refactor: refactor global styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,25 @@
 @import 'tailwindcss';
 
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
-
 @theme {
 	/* colors - start */
-	--color-neutral--100: hsl(0, 0, 100%);
-	--color-neutral--200: hsl(0, 0, 98%);
-	--color-neutral--300: hsl(0, 0, 52%);
-	--color-neutral--400: hsl(209, 23, 22%);
-	--color-neutral--500: hsl(207, 26, 17%);
-	--color-neutral--600: hsl(200, 15, 8%);
+	--color-neutral-100: #ffffff;
+	--color-neutral-200: #fafafa;
+	--color-neutral-300: #858585;
+	--color-neutral-400: #2b3945;
+	--color-neutral-500: #202c37;
+	--color-neutral-600: #111517;
+
+	--color-neutral-1: #2b3844;
+	--color-neutral-2: #c4c4c4;
 	/* colors - end */
 
 	/* shadow - start */
-	--drop-shadow-2xl: 0 0 7px 0 hsla(0, 0, 0, 29.21%);
-	--drop-shadow-sm: 0 0 4px 1px hsla(0, 0, 0, 10.49%);
-	--drop-shadow-md: 0 2px 4px 0 hsla(0, 0, 0, 5.62%);
-	--drop-shadow-lg: 0 2px 9px 0 hsla(0, 0, 0, 5.32%);
-	--drop-shadow-xl: 0 0 7px 2px hsla(0, 0, 0, 2.94%);
+	--shadow-2xl: 0 0 7px 0 rgba(0, 0, 0, 29.21%);
+	--shadow-sm: 0 0 4px 1px rgba(0, 0, 0, 10.49%);
+	--shadow-md: 0 2px 4px 0 rgba(0, 0, 0, 5.62%);
+	--shadow-lg: 0 2px 9px 0 rgba(0, 0, 0, 5.32%);
+	--shadow-xl: 0 0 7px 2px rgba(0, 0, 0, 2.94%);
+	--shadow-3xl: 0 35px 35px rgba(0, 0, 0, 0.25);
 	/* shadow - end */
 
 	/* rounded - start */
@@ -26,12 +28,22 @@
 	--rounded-lg: 0.375rem;
 	--rounded-xl: 0.5rem;
 	/* rounded - end */
+
+	/* text - start */
+	--text-xs: 0.75rem;
+	--text-sm: 0.875rem;
+	--text-md: 1rem;
+	/* text - end */
+
+	--breakpoint-sm: 36rem;
 }
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @layer components {
 	.container {
-		max-width: 1280px;
+		max-width: 80rem;
 		margin-inline: auto;
-		padding-inline: clamp(16px, 10vw, 80px);
+		padding-inline: clamp(1rem, 6vw, 5rem);
 	}
 }
